UI: WdigetWithLabelUI changes - Make the panel collapsible by clicking anywhere in header - Drag from header to other panel headers to collapse/expand many quick - Make sure that requirements button consumes onMouseDown so it doesn't toggle collapse state

--- a/src/theme/theme.css
+++ b/src/theme/theme.css
@@ -45,6 +45,11 @@ body {
     /* border-bottom: 1px solid oklch(var(--p)/.4); */
     padding: 2px;
 }
+
+.WIDGET-GROUP-BORDERED:hover .WIDGET-COLLAPSE-BTN {
+    opacity: 100% !important;
+}
+
 .SUB-FIELD {
     flex: 1;
     /* background: #272729; */
